<resources>
    <string name="app_name">Dental Application Project</string>
    <string name="dental_application">Dental Application</string>
    <string name="doctors">Doctors</string>
    <string name="our_work">Our Work</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="appointment">Appointment</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="selected_date">Selected Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="admin">Admin</string>
    <string name="appointments">appointments</string>
    <string name="email">email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_my_maps">MyMapsActivity</string>
</resources>