<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom|fill"
    android:background="#009688"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/adminMainTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Dental Application"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_margin="21dp"
        />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:columnCount="2"
        app:rowCount="4">

        <androidx.cardview.widget.CardView
            android:id="@+id/adminAppointments"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/appointmentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                app:srcCompat="@drawable/appointment"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:text="@string/appointment" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/adminShowUsers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:text="@string/doctors" />

            <ImageView
                android:id="@+id/ourDoctorsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                app:srcCompat="@drawable/doctors"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/myAppointmentsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:text="My Appointments" />

            <ImageView
                android:id="@+id/myAppointmentsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                app:srcCompat="@drawable/my_appp"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/locationCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:text="@string/location" />

            <ImageView
                android:id="@+id/mapsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                app:srcCompat="@drawable/map"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/settingsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:text="@string/settings" />

            <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                app:srcCompat="@drawable/settings"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/logoutCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:text="@string/logout" />

            <ImageView
                android:id="@+id/logoutIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                app:srcCompat="@drawable/logout"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>


    </androidx.gridlayout.widget.GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

</LinearLayout>